--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
     "expo": "~39.0.2",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "8.3",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
